done dark + light theme study plan. Done coding this today

--- a/dark-theme/styles-dark-theme.css
+++ b/dark-theme/styles-dark-theme.css
@@ -1,104 +1,4 @@
-/* DARK THEME */
-:root {
-    --clr--background: #000;
-    --clr--headings: #fff;
-    --clr--body-text: #fff;
-    --clr--link: #22d3ee;
-    --clr--link-hover: #a5f3fc;
-    --clr--nav--link: #e879f9;
-    --clr--nav--link--hover: #f5d0fe;
-    --clr--nav--link--focus: #f5d0fe;
-    
+/* THIS FILE IS BLANK ON PURPOSE
 
-    --font-family--headings: 'Lilita One', sans-serif;
-    --font-family--body-text: 'Goudy Bookletter 1911', serif;
-
-    /* font-family: 'Goudy Bookletter 1911', serif;
-font-family: 'Lilita One', sans-serif; */
-
-    --font-weight--headings: 700;
-    --font-weight--body-text: 400;
-    --font-weight--nav--link: 500;
-    --font-weight-focus-hover: 700;
-
-    --margin--body: 2rem;
-}
-
-body {
-    background-color: var(--clr--background);
-    color: var(--clr--body-text);
-    font-family: var(--font-family--body-text);
-    font-size: 1.5rem;
-    line-height: 2.25rem;
-    margin: var(--margin--body)
-}
-
-h1, h2, h3, h4, h5, h6 {
-    color: var(--clr--headings);
-    font-family: var(--font-family--headings);
-    letter-spacing: .2rem;
-    font-weight: 700;
-    line-height: 1.2;
-    margin: 2rem 0;
-}
-
-p {
-    margin: 1rem 2rem;
-    max-width: 60ch;
-}
-
-a {
-    color: var(--clr--link);
-    text-decoration: underline;
-}
-
-a:hover, a:focus {
-    color: var(--clr--link-hover);
-    text-decoration: underline;
-    text-underline-offset: 1rem;
-}
-
-li {
-    list-style: none;
-    line-height: 4rem;
-}
-
-.nav--link {
-    color: var(--clr--nav--link);
-    font-family: var(--font-family--headings);
-    font-weight: var(--font-weight--nav--link);
-    font-size: 1.25rem;
-    font-weight: 700;
-    text-decoration: underline;
-    margin: auto;
-}
-
-.nav--link:hover, .nav--link:focus {
-    color: var(--clr--nav--link--focus);
-    font-weight: var(--font-weight--focus-hover);
-    text-underline-offset: 1rem;
-}
-
-/* UTILITY CLASSES */
-
-.flex {
-    display: flex;
-}
-
-.padding--x-1rem {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-.padding--x-4rem {
-    padding-left: 4rem;
-    padding-right: 4rem;
-}
-
-.padding--y-1rem {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-}
-.margin-bottom-2rem {
-    margin-bottom: 2rem;
-}
+The css file for the default theme for the top level page `/styles.css` is dark.
+This file exists to show the file structure for all themes. */
